--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Galeria2"
         tools:targetApi="31">
+        <provider
+            android:authorities="barbosa.martins.rafael.galeria2.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths">
+            </meta-data>
+        </provider>
         <activity
             android:name=".PhotoActivity"
             android:exported="false"
