--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Galeria2"
         tools:targetApi="31">
         <provider
-            android:authorities="barbosa.martins.rafael.galeria2.fileprovider"
+            android:authorities="martins.barbosa.rafael.galeria2.fileprovider"
             android:name="androidx.core.content.FileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
@@ -25,15 +25,15 @@
             </meta-data>
         </provider>
         <activity
-            android:name=".PhotoActivity"
+            android:name=".activity.PhotoActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value=".activity.MainActivity" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
